<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFE5B4"

    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textDirection="firstStrongRtl"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/First_name"
            android:inputType="textPersonName"
            android:textColorHint="#795548"
            android:textSize="15sp" />

        <EditText


            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Last_name"
            android:inputType="textPersonName"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:autofillHints=""
            android:inputType="number"
            android:minHeight="48dp"
            android:background="@android:drawable/edit_text"



            />




</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/NumOfPeople"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/size_of_people" />

        <EditText
            android:id="@+id/total_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:autofillHints=""
            android:inputType="number"
            android:minHeight="48dp"
            android:background="@android:drawable/edit_text"



            />
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/table_smoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smoking_table" />

            <RadioButton
                android:id="@+id/notable_smoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_smoking_table" />

        </RadioGroup>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:timePickerMode="spinner"
                />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                />


            <Button
                android:id="@+id/btnreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_reset" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_now" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>





















